# Attendance-Management-using-Face-Recognition

./: .gitignore  Attendance_app.py  README.md  capture.py  excel.py  face_detect.py  face_train.py  main_file.py  pyproject.toml  requirements.txt  students_list.py
projectlogo/: Attendance1.plp
